@@ -1,5 +1,7 @@
 *SVN*
 
+* Ensure that the default run options are mixed into the command options when executing a command from the cap shell [Ken Collins]
+
 * Added :none SCM module for deploying a specific directory's contents [Jamis Buck]
 
 * Improved "copy" strategy supports local caching and pattern exclusion (via :copy_cache and :copy_exclude variables) [Jamis Buck]
